# product-sourcing-automation

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  debug_extract.py  pyproject.toml  requirements.txt  run.py  test_scrape.py  test_urls.txt
chrome-extension/: background.js  content-script.js
chrome-extension/popup/: popup.html  popup.js
config/: settings.yaml
docs/: ARCHITECTURE.md
native-host/: host.bat  host.py  install.bat
src/: __init__.py  config.py  downloader.py  prompts.py  utils.py
src/agents/: product_agent.py  slimdom_extractor.py
src/api/: __init__.py  ai_agent.py  server.py
src/db/: repository.py
src/llm/: __init__.py  factory.py  service.py
src/loader/: url_loader.py
src/models/: product.py  raw_data.py
src/pipeline/: __init__.py  pipeline.py  stages.py
src/processing/: image_api.py  image_styler.py  webp_converter.py
src/shopify/: __init__.py  csv_exporter.py
src/webui/: app.py  excel_exporter.py
tests/: conftest.py  test_csv_exporter.py  test_llm_service.py  test_models.py  test_repository.py  test_stage_result.py
